# line-folowing-solution

./: .gitignore  CMakeLists.txt  I2C.cpp  I2C.hpp  main.cpp  main.hpp  opencv_aee.cpp  referencecode.cpp  test.py
.cache/clangd/index/: main.cpp.92CE9E6D6E39CCD3.idx  opencv_aee.hpp.503F6D8CBDFECF1B.idx
